bin/console/src/snapshots/chaos_console__pager_overlay__tests__static_overlay_snapshot_basic.snap
---
source: bin/console/src/pager_overlay.rs
expression: term.backend()
---
"/ S T A T I C / / / / / / / / / / / / / "
"one                                     "
"two                                     "
"three                                   "
"~                                       "
"~                                       "
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q to quit                              "
"                                        "
